crates/solidity/testing/snapshots/bindings_output/mappings/elementary/generated/v2/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:4:5]
    │
  4 │ ╭─▶     function get(address _addr) public view returns (uint256) {
    ┆ ┆   
 14 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (2):
- Def: #1 ["Mapping" @ input.sol:1:10] (contract)
- Def: #2 ["myMap" @ input.sol:2:40] (state var, type: address => uint256)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Mapping {
   │          ───┬───  
   │             ╰───── name: 1
 2 │     mapping(address => uint256) public myMap;
   │                                        ──┬──  
   │                                          ╰──── name: 2
───╯
